sub-comment: Change online comment form css

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2966,6 +2966,7 @@ label.inline-list {
                         margin-bottom: 0;
                         resize: none;
                         overflow: hidden;
+                        padding-left: 10px;
                     }
 
                     button {
@@ -5506,6 +5507,15 @@ label.issue-item-row {
     right: 8px;
     margin-top: 14px;
     z-index:999;
+}
+
+.oneline-comment-box {
+    display: flex;
+    margin-left: 12px;
+
+    textarea {
+        width: 100%;
+    }
 }
 
 .textarea-box {
