--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -63,6 +63,11 @@
     .board-comment-wrap .comments .event .commit-list{
         margin: 10px 0 !important;
     }
+
+    .board-comment-wrap .comments .comment .subcomment-media-body {
+        margin-left: 0;
+    }
+
     .dropdown-toggle .d-label {
         width: inherit !important;
     }
