--- a/app/views/common/twoColumnModeCheckboxArea.scala.html
+++ b/app/views/common/twoColumnModeCheckboxArea.scala.html
@@ -8,6 +8,8 @@
 
 <div class="two-column-icon mr10 hide-in-mobile" id="two-column-mode-checkbox" title='@Messages("common.two.column.mode")' data-content='@Messages("common.two.column.mode.desc")'>
     <label class="checkbox">
-        <input id="two-column-mode" type="checkbox"> <i class="yobicon-explorerwindow"></i>
+        <div class="two-column-icon-border">
+            <input id="two-column-mode" type="checkbox"><span class="two-column-mode-text">Column View</span>
+        </div>
     </label>
 </div>
