--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -212,6 +212,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.Sha1.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.Tasklist.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.SubComment.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.CommentAttachmentsUpdate.js")"></script>
 <script type="text/javascript">
         $(document).ready(function(){
             $yobi.loadModule("board.View", {
