--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -500,6 +500,7 @@
 
         // detect comment which contains mention at me
         $(".comment-body:contains('@UserApp.currentUser().getPureNameOnly')").closest(".comment").addClass("mentioned");
+        $(".user-link:contains('@UserApp.currentUser().getPureNameOnly')").addClass("me");
     });
 
         $(function () {
