--- a/app/views/milestone/view.scala.html
+++ b/app/views/milestone/view.scala.html
@@ -1,24 +1,10 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Keesun Baik
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
-@(title: String, milestone: models.Milestone, project: Project, issueState:State)
+@(title: String, milestone: Milestone, project: Project, issueState:State)
 @import scala.collection.immutable._
 @import org.apache.commons.lang.StringUtils
 @import utils.TemplateHelper._
@@ -155,6 +141,9 @@
             "sMilestoneId" : "@milestone.id",
             "sURLLabels"   : "@routes.IssueApp.issues(project.owner, project.name)"
         });
+
+        // detect links contains mention at me
+        $(".user-link:contains('@UserApp.currentUser().getPureNameOnly')").addClass("me");
     });
 </script>
 }
