--- a/app/views/common/usermenu_tab_content_list.scala.html
+++ b/app/views/common/usermenu_tab_content_list.scala.html
@@ -4,9 +4,13 @@
 * Copyright Yona & Yobi Authors & NAVER Corp.
 * https://yona.io
 **@
-<div class="tab-pane user-project-list active" id="myProjectList">
-@views.html.index.myProjectList(UserApp.currentUser())
-</div>
-<div class="tab-pane user-project-list" id="myOrganizationList">
+<div class="tab-pane user-project-list active" id="myOrganizationList">
 @views.html.index.myOrganizationList(UserApp.currentUser())
 </div>
+<div class="tab-pane user-project-list" id="myProjectList">
+@views.html.index.myProjectList(UserApp.currentUser())
+</div>
+<div class="tab-pane user-project-list" id="allProjectList">
+@views.html.index.allProjectList(UserApp.currentUser())
+</div>
+
