--- a/app/views/index/myOrganizationList.scala.html
+++ b/app/views/index/myOrganizationList.scala.html
@@ -1,7 +1,7 @@
 @**
 * Yona, 21st Century Project Hosting SW
 *
-* Copyright Yona & Yobi Authors & NAVER Corp.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
 * https://yona.io
 **@
 @(currentUser:User)
@@ -12,6 +12,27 @@
         <div id="@title" class="no-result tab-pane user-ul @if(isActive) {active}">@Messages("title.no.results")</div>
     } else {
         <ul class="tab-pane user-ul @if(isActive) {active}" id="@title">
+            @defining(UserApp.currentUser().ownProjects){ ownProjects =>
+                <li class="org-li">
+                    <div class="org-list project-flex-container all-orgs">
+                        <div class="project-item project-item-container">
+                            <div class="flex-item site-logo">
+                                <i class="project-avatar"></i>
+                            </div>
+                            <div class="projectName-owner all-org-names flex-item">
+                                <div class="project-name org-name flex-item">@UserApp.currentUser().loginId</div>
+                                <div class="project-owner flex-item">@ownProjects.size()</div>
+                            </div>
+                        </div>
+                        <div class="star-org flex-item"></div>
+                    </div>
+                    <ul class="project-ul">
+                    @for(project <- ownProjects){
+                        @allProjectList_partial(project, FavoriteProject.findByProjectId(UserApp.currentUser().id, project.id) != null)
+                    }
+                    </ul>
+                </li>
+            }
             @for(organization <- favoredOrganizations) {
                 @if(favoredOrganizations.last.equals(organization)){
                     @myOrganizationList_partial(organization, true, true)
@@ -28,10 +49,11 @@
     }
 }
 
+
     <div class="search-result">
         <div class="group">
             <input class="search-input org-search" type="text" autocomplete="off" placeholder="@Messages("title.type.name")">
             <span class="bar"></span>
         </div>
-        @displayOrganizations("organizations", Organization.findOrganizationsByUserLoginId(UserApp.currentUser.loginId), currentUser.getFavoriteOrganizations)
+        @displayOrganizations("organizations", Organization.findAllOrganizations(UserApp.currentUser.loginId), currentUser.getFavoriteOrganizations)
     </div>
