--- a/app/views/index/myOwnProjectList_partial.scala.html
+++ b/app/views/index/myOwnProjectList_partial.scala.html
@@ -7,11 +7,7 @@
 @(organization: Organization, favored:Boolean, isLast:Boolean = false)
 @import utils.TemplateHelper._
 
-@isAllowShowCount() = @{
-    UserApp.currentUser().isSiteManager || UserApp.currentUser().isAdminOf(organization)
-}
-
-@defining(UserApp.currentUser().getFavoriteProjects){ favoriteProjects =>
+@defining(UserApp.currentUser().ownProjects){ ownProjects =>
 <li class="org-li @if(isLast){favored}">
     <div class="org-list project-flex-container all-orgs">
         <div class="project-item project-item-container">
@@ -19,17 +15,16 @@
                 <i class="project-avatar">@if(hasOrganizationLogo(organization)){<img class="logo" src="@urlToOrganizationLogo(organization)">}else{<span class="dummy-25px"> </span>}</i>
             </div>
             <div class="projectName-owner all-org-names flex-item">
-                <div class="project-name org-name flex-item"><a href="@routes.OrganizationApp.organization(organization.name)" target="_blank">@organization.name</a></div>
-                <div class="project-owner flex-item">@if(isAllowShowCount){@organization.projects.size()}</div>
+                <div class="project-name org-name flex-item">@UserApp.currentUser().loginId</div>
+                <div class="project-owner flex-item">@ownProjects.size()</div>
             </div>
         </div>
-        <div class="star-org flex-item" data-organization-id="@organization.id">
-            <i class="star @if(favored){starred} material-icons">star</i>
+        <div class="star-org flex-item">
         </div>
     </div>
     <ul class="project-ul">
-    @for(project <- organization.getSortedByProjectName){
-        @allProjectList_partial(project, favoriteProjects.contains(project))
+    @for(project <- ownProjects){
+        @allProjectList_partial(project, UserApp.currentUser().favoriteProjects.contains(project))
     }
     </ul>
 </li>
